# SunnyCapturer

./: .gitmodules  CMakeLists.txt  README.ZH-CN.md  README.md  README.zh_CN.md  _coverpage.md  _sidebar.md  acknowledgement.md  build.bat  changelog.md  convert_to_utf8_bom.py  development_technology.md  extract_text_ocr.md  getting_started.md  image_translation.md  index.html  log.conf  office-site.md  office_site.md  setup_package_user.iss  supported_os.md  translation.md  troubleshooting.md  xconfig - Copy.ini  xconfig.ini  xconfig.json
1st_FLIPPED-Screenshot-Code/: OnlyBuild_x64 .bat
2nd-SunnyCapturer-v1.x-Code/: .gitmodules  README.md  log.conf
4th-SunnyCapturer-v3.x-Code/: README.md
docs/: CNAME  development_technology.md  index.md
docs-page/: extract_text_ocr.md  getting_started.md  image_translation.md  supported_os.md
history-version-code/: README.md
src/: CMakeLists.txt  create_update_ts2qm.bat  main.cpp  resources.qrc  sidesettingui.cpp  sidesettingui.h  sidesettingui.ui  ts2qm.bat  widget.ui
src/commom/abstract_class/: ISingleton.h
src/commom/include/: isingleton.h  systeminfo.h  xapphelper.h  xlog.h
src/commom/sources/: systeminfo.cpp  xapphelper.cpp  xlog.cpp
src/common/data_analytics/: dbanalytics.cpp  dbanalytics.h
src/common/google_analytics4/: ganalytics4.cpp  ganalytics4.h
src/common/google_analytics4/ganalytics/: ganalytics.cpp  ganalytics.h  ganalytics_worker.cpp  ganalytics_worker.h
src/common/google_analytics4/google_geographic/: googlegeo.cpp  googlegeo.h
src/common/include/: isingleton.h  systeminfo.h
src/common/sources/: systeminfo.cpp
src/data/: config_global.h  configjson.cpp  configjson.h  configmanager.cpp  configmanager.h
src/resources/: change_log.txt
src/resources/changelog/: changelog.txt
src/resources/cpack/: tech.xmuli.sunny.desktop
src/resources/cpack/appstream/: tech.xmuli.sunny.metainfo.xml
src/resources/debian/: changelog  control  copyright  postinst  postrm  sunny.postinst  sunny.postrm
src/resources/licenses/: License.md  PrivacyAndDataProtection.md  PrivacyAndDataProtection_zh_CN.md
src/resources/licenses/tripartite/: README.txt
src/resources/linux/debian/: control  tech.xmuli.sunny.desktop
src/resources/linux/debian/appstream/: tech.xmuli.sunny.metainfo.xml
src/resources/screenshot_ui/changelog/: changelog.txt
src/resources/screenshot_ui/licenses/: License.md
src/resources/screenshot_ui/licenses/tripartite/: GTRONICK_QSS_MIT_LICENSE  README.txt
src/translations/: Sunny_en_US.ts  Sunny_pt_BR.ts  Sunny_pt_PT.ts  Sunny_zh_CN.ts  Sunny_zh_TW.ts  de.ts  en_us.ts  pt_br.ts  zh_cn.ts  zh_tw.ts
src/ui/commom/communication/: communication.cpp  communication.h
src/ui/commom/ocr/: authv3util.cpp  authv3util.h  networkocr.cpp  networkocr.h
src/ui/common_widgets/: horspacerline.cpp  switchbutton.cpp  tips.cpp  verspacerline.cpp  xblureffect.cpp  xcolorbutton.cpp  ximagedlg.cpp  ximagedlg.ui  ximageviewer.cpp  ximageviewer.ui  xkeysequenceedit.cpp  xocrtextedit.cpp  xtextedit.cpp  xtoolbutton.cpp
src/ui/composite_widgets/: about.cpp  about.ui  aboutinfo.cpp  aboutinfo.ui  colorpicker.cpp  general.cpp  general.ui  hotkeys.cpp  hotkeys.ui  imageview.cpp  interface.cpp  interface.ui  licenseui.cpp  licenseui.ui  output.cpp  output.ui  paste.cpp  paste.ui  pin.cpp  pin.ui  resetui.cpp  resetui.ui  switchbutton.cpp  tips.cpp  tokens.cpp  tokens.ui  verspacerline.cpp  xcolorbutton.cpp  xguidebutton.cpp  xguidetips.cpp  xkeysequenceedit.cpp  xmagnifyingglass.cpp  xmagnifyingglass.ui  xtextedit.cpp
src/ui/include/: about.h  aboutinfo.h  absbtnsctrl.h  colorpicker.h  general.h  horspacerline.h  hotkeys.h  imageview.h  interface.h  licenseui.h  output.h  paste.h  pin.h  resetui.h  switchbutton.h  tips.cpp  tips.h  tokens.h  verspacerline.h  xblureffect.h  xcolorbutton.h  xguidebutton.h  xguidetips.h  ximagedlg.h  ximageviewer.h  xkeysequenceedit.h  xmagnifyingglass.h  xocrtextedit.h  xtextedit.h  xtoolbutton.h  xwidget_global.h
src/ui/paint_bar/: paintbar.cpp  paintbar.h  paintbarhelper.cpp  paintbarhelper.h  paintctrlbar.cpp  paintctrlbar.h  painttoolbar.cpp  painttoolbar.h
src/ui/paint_bar/common/: absbtnsctrl.cpp  absbtnsctrl.h
src/ui/paint_bar/pin/: pinwidget.cpp  pinwidget.h  pinwidget.ui
src/ui/paint_bar/toolbar_level/: paintbarhelper.cpp  paintbarhelper.h  paintctrlbar.cpp  paintctrlbar.h  painttoolbar.cpp  painttoolbar.h
src/ui/paint_bar/toolbar_level/common/: absbtnsctrl.cpp  absbtnsctrl.h
src/ui/paint_bar/toolbar_level/guide_tips/: xguidebutton.cpp  xguidebutton.h  xguidetips.cpp  xguidetips.h  xguidetips.ui
src/ui/paint_bar/toolbar_level/img_translate/: imagetranslatedlg.cpp  imagetranslatedlg.h  imagetranslatedlg.ui  ximagetranslatewidget.cpp  ximagetranslatewidget.h
src/ui/paint_bar/toolbar_level/ocr_text/: xocrdlg.cpp  xocrdlg.h  xocrdlg.ui  xocrtextctrl.cpp  xocrtextctrl.h  xocrwidget.cpp  xocrwidget.h  xocrwidget.ui
src/ui/paint_bar/toolbar_level/ocr_translate/: imagetranslatedlg.cpp  imagetranslatedlg.h  imagetranslatedlg.ui  ocrtranslatectrl.cpp  ocrtranslatectrl.h
src/ui/paint_bar/toolbar_level/pin/: pinwidget.cpp  pinwidget.h
src/ui/screenshot/: capturehelper.cpp  capturehelper.h  monitors.cpp  monitors.h  screenshot.cpp  screenshot.h  tray.cpp  tray.h
src/ui/setting/: abssettingui.cpp  abssettingui.h  abssettingui.ui  sidesettingui.cpp  sidesettingui.h  sidesettingui.ui
translations/: de.ts  en_us.ts  pt_br.ts  zh_cn.ts  zh_tw.ts
windows_rect/: CMakeLists.txt
windows_rect/include/: ntwindowsrect.h  windowsrect.h  windowsrect_global.h  x11windowsrect.h
windows_rect/sources/: ntwindowsrect.cpp  windowsrect.cpp  x11windowsrect.cpp
xwidgets/: CMakeLists.txt
xwidgets/demo/: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui
xwidgets/src/: CMakeLists.txt  xwidgets.cpp  xwidgets.h
xwidgets/src/include/: chatinputedit.h  xkeysequenceedit.h  xtextwidget.h  xwidgets.h  xwidgets_global.h
xwidgets/src/source/: xwidgets.cpp
xwidgets/src/source/base/: chatinputedit.cpp  xkeysequenceedit.cpp  xtextwidget.cpp  xwidgets.cpp
zh-cn/: FAQ.md  (+12 more)
(+191 files in other folders)
